@@ -4,6 +4,7 @@ Update rottentomatoes to fit new RT brand identity
 Touchup tmdb icon
 Add studio logo to videoinfo
 Fix for images/extras showing in plugins
+Prefer fanart for landscape widgets toggle
 
 [B]0.9.12[/B]
 LEIA - Fix for scrollbars
